# NPS

./: .dockerignore  .env.example  .gitignore  AUDIT_REPORT.md  BUILD_HISTORY.md  CLAUDE.md  CURRENT_STATE.md  Dockerfile.railway  ISSUES.md  ISSUE_LIST.md  Makefile  NPS_ARCHITECTURE_PLAN.md  PROGRESS.md  PROJECT_STATE_REPORT.md  PROJECT_TRUTH.md  README.md  SESSION_LOG.md  TODO_PLAN.md  WISHLIST.md  WISH_LIST.md  docker-compose.override.yml  docker-compose.yml  railway.toml
api/: Dockerfile  ENDPOINT_VALIDATION_REPORT.md  pyproject.toml
api/app/: config.py  database.py  main.py
api/app/middleware/: auth.py  rate_limit.py  security_headers.py
api/app/models/: admin.py  audit.py  auth.py  backup.py  events.py  learning.py  location.py  oracle.py  oracle_user.py  settings.py  share.py  translation.py  user.py
api/app/orm/: __init__.py  api_key.py  (+11 more)
api/data/: cities_by_country.json  countries.json
api/tests/: conftest.py  test_admin.py  test_auth.py  test_auth_router.py  test_backup.py  test_daily_reading.py  test_dashboard_stats.py  test_feedback.py  test_health.py  test_learning_stubs.py  test_location.py  test_multi_user_framework_reading.py  test_multi_user_reading.py  test_name_question_readings.py  test_oracle_readings.py  test_oracle_users.py  test_permissions.py  test_security.py  test_settings.py  test_share.py  test_stamp_endpoint.py  test_telegram_admin.py  test_telegram_daily.py  test_telegram_link.py  test_time_reading.py  test_translation_session24.py  test_users.py  test_vault.py  test_websocket.py
services/oracle/: Dockerfile  pyproject.toml
(+596 files in other folders)
